assets/stylesheets/tour-dates.css
/* Text Formatting */

body {
  font-family: 'Permanent Marker', cursive;
}

/* Photo Formatting */

.tour-dates-banner {
  background-repeat: no-repeat;
  background-position: top;
  background-attachment:fixed;
  background-size: cover;
  width: 100%;
}

/* Tour Dates List Formatting */

table {
  margin-left: 200px;
  padding: 50px;
  width: 75%;
}

table a {
  font-family: 'Poppins', sans-serif;
  background-color: #D4AF37;
  border-radius: 15px;
  color: black;
  padding: 20px 50px;
  text-align: center;
  text-decoration: none;
  margin: 4px 2px;
  font-size: 25px;
  font-weight: bold;
}

td {
  padding-left: 10px;
  padding-bottom: 50px;
  text-align: center;
}

.stacked-date {
  font-family: 'Poppins', sans-serif;
  color: white;
  padding-left: 10px;
  padding-right: 10px;
  font-size: 20px;
  font-weight: bolder;
  vertical-align: center;
}

.date-background {
  background: #333;
  width: 100px;
  height: 80px;
}

.stacked-location {
  font-size: 35px;
  color: #333;
}

/* Nav Bar Formatting */

.logo-img {
    float: left;
    position: relative;
    margin: 10px 28px;
    width: 5%;
    length: 5%;
}

.topnav {
    background-color: black;
    overflow: hidden;
}

.topnav a {
  float: left;
  color: white;
  text-align: center;
  padding: 20px 28px;
  text-decoration: none;
  font-size: 20pt;

}

.topnav a:hover {
    background-color: #333;
    color: #D4AF37;
}

.topnav a.active {
    background-color: black;
    color: #D4AF37;
}

